tests/negative/gold/import_as_test.gold
tests/negative/import_as_test.toit:3:13: error: 'as' must be followed by identifier
import http as
            ^~
Compilation failed.
